Update Iris flower Class.ipynb

--- a/Data Science Prj/Iris flower Class.ipynb
+++ b/Data Science Prj/Iris flower Class.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2 : Iris Flower Classification"
+    "# TASK 2 : Iris Flower Classification"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CREATOR : PritesH Gaykar"
+    "CREATOR : Pritesh Gaykar"
    ]
   },
   {
